# AISH

./: .gitignore  Cargo.toml  DESIGN.md  README.md
.cargo/: binstall.toml
.github/workflows/: ci.yml  release.yml
HomebrewFormula/: aish.rb
crates/aish-adapters/: Cargo.toml
crates/aish-adapters/src/: claude.rs  generic.rs  hermes.rs  lib.rs  mock.rs  openclaw.rs
crates/aish-cli/: Cargo.toml
crates/aish-cli/src/: main.rs
crates/aish-core/: Cargo.toml
crates/aish-core/src/: band.rs  config.rs  event.rs  lib.rs  registry.rs  scheduler.rs  types.rs
crates/aish-core/tests/: band_smoke_test.rs  e2e_test.rs
crates/aish-daemon/: Cargo.toml
crates/aish-daemon/src/: main.rs
crates/aish-gui/: Cargo.toml  build.rs  bundle.sh
crates/aish-gui/python/: main.py
crates/aish-gui/qml/: main.qml
crates/aish-gui/src/: main.rs  native.rs
crates/aish-mcp/: Cargo.toml
crates/aish-mcp/src/: client.rs  lib.rs  server.rs  transport.rs  types.rs
crates/aish-ssh/: Cargo.toml
crates/aish-ssh/src/: lib.rs
crates/aish-store/: Cargo.toml
crates/aish-store/src/: lib.rs  migrate.rs
crates/aish-tui/: Cargo.toml
crates/aish-tui/src/: app.rs  main.rs  ui.rs
crates/aish-tui/src/panels/: activity.rs  agents.rs  bands.rs  fanout.rs  mcp.rs  mod.rs  models.rs  permissions.rs  skills.rs  tasks.rs  tokens.rs
