[workspace]
resolver = "2"
members = [
    "crates/aish-core",
    "crates/aish-mcp",
    "crates/aish-store",
    "crates/aish-ssh",
    "crates/aish-cli",
    "crates/aish-tui",
    "crates/aish-gui",
    "crates/aish-daemon",
    "crates/aish-adapters",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/StartHex/AISH"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
futures = "0.3"
bytes = "1"
parking_lot = "0.12"
once_cell = "1"
tempfile = "3"
dirs = "6"
notify = { version = "7", features = ["macos_kqueue"] }

# aish internal crates
aish-core = { path = "crates/aish-core" }
aish-mcp = { path = "crates/aish-mcp" }
aish-store = { path = "crates/aish-store" }
aish-ssh = { path = "crates/aish-ssh" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
