[package]
name = "aish-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

# Adapter binaries — each adapter is an MCP Server process

[[bin]]
name = "aish-adapter-claude"
path = "src/bin/claude.rs"

[[bin]]
name = "aish-adapter-mock"
path = "src/bin/mock.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
chrono.workspace = true
clap = { version = "4", features = ["derive"] }
tracing-subscriber.workspace = true

aish-core.workspace = true
aish-mcp.workspace = true
