[package]
name = "aish-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

# GUI stub — cxx-qt integration deferred to M2

[[bin]]
name = "aish-gui"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true

aish-core.workspace = true
aish-mcp.workspace = true

[features]
default = []
gui-native = []
