[package]
name = "aish-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aish-gui"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde_json.workspace = true
cxx = "1"

aish-core.workspace = true
aish-mcp.workspace = true

# Qt6 native GUI via cxx-qt
cxx-qt = { version = "0.7", optional = true }
cxx-qt-lib = { version = "0.7", optional = true, features = ["qt_gui", "qt_qml"] }

[build-dependencies]
cxx-qt-build = { version = "0.7", optional = true }

[features]
default = []
gui-native = ["cxx-qt", "cxx-qt-lib", "cxx-qt-build"]
