[package]
name = "aish-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
dirs.workspace = true

aish-core.workspace = true
