[package]
name = "aish-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aish-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
futures.workspace = true

chrono.workspace = true
uuid.workspace = true

aish-core.workspace = true
aish-mcp.workspace = true
aish-store.workspace = true
